Add ability for owners to view and update their pets (#247)
* feat: add general fixes after backend refactoring

* fix: navigation typescript errors

* feat: add my-pets endpoint

* feat: add ability to update a pet

* refactor: rename adoption concept to pet

* feat: update form title when editing

* tests: fix broken specs

* feat: update form title when editing

* feat: translate error messages

* docs: update roadmap

--- a/apps/mobile/src/i18n/locales/pt-BR.json
+++ b/apps/mobile/src/i18n/locales/pt-BR.json
@@ -1,7 +1,7 @@
 {
   "YEAR": "ano(s)",
   "REGISTER_ADOPTION": {
-    "TITLE": "Cadastrar Adoção",
+    "TITLE": "Cadastrar Pet",
     "STEP": "Passo",
     "FORM": {
       "NAME": "Nome do Pet",
@@ -50,8 +50,13 @@
       "TYPE_REQUIRED": "Informe o tipo do seu Pet",
       "AGE_REQUIRED": "Informe a idade do seu Pet",
       "GENDER_REQUIRED": "Informe o sexo do seu Pet",
-      "SIZE_REQUIRED": "Informe o porte do seu Pet"
+      "SIZE_REQUIRED": "Informe o porte do seu Pet",
+      "INVALID_DATA": "Dados inválidos!",
+      "GENERIC_ERROR": "Erro ao salvar dados do pet!"
     }
+  },
+  "PET_UPDATE": {
+    "TITLE": "Atualizar Pet"
   },
   "SIGN_IN": {
     "FORM": {
