Allow partial user registration (#251)
* feat: make location optional

* feat: add get-current-user-info use case

* feat: add complete-sign-up use case

* feat: persist only auth tokens to the secure store and fetch user info from backend

* feat: only require geolocation after sign-in

* test: fix broken specs

* feat: add skip location button

* fix: infinite loading when 401 error on initial credetials check

--- a/apps/mobile/src/i18n/locales/pt-BR.json
+++ b/apps/mobile/src/i18n/locales/pt-BR.json
@@ -102,6 +102,7 @@
     "WHERE": "Você está em",
     "CONFIRM_BUTTON": "Confirmar minha localização",
     "GET_LOCATION": "Compartilhar minha localização",
+    "SKIP": "Ignorar",
     "GET_LOCATION_NEW_ATTEMPT": "Buscar novamente",
     "LOCATION": "localização",
     "IMAGE_ALT_TEXT": "Um menino acenando com seu cão do lado",
